package Ex3;

public class Animal {
    private String name;
    private int age;

    protected void makeSound () {}
}
