package Ex3;

public class Cat extends Animal{
    private String breed;

    protected void bark() {}
}
