package Ex3;

public class Dog extends Animal{
    private String color;

    protected void meow() {}
}
