' Generated by UML Generator
' Encoded: PP3F2i8m38VlVOg05pqKFEyW6thnl2V8sZ33sbIwJi4_xswxAGoyX7oGxvUGUamOq-IT6WUMAqRqO1oEOvDIv6vAT3P1MduGxDM5BO7XQ1mfDKz18-pHmLC1Q45F5RJPaxumzXbPKkbrBXkF0xLX4hlTLN0BRDNxbtF4j8HqaSYkKsQpmpZyIwVGBv89BiG_oLEuhwMoG-lNuNkqAlgQQnARF_41
' URL: http://www.plantuml.com/plantuml/uml/PP3F2i8m38VlVOg05pqKFEyW6thnl2V8sZ33sbIwJi4_xswxAGoyX7oGxvUGUamOq-IT6WUMAqRqO1oEOvDIv6vAT3P1MduGxDM5BO7XQ1mfDKz18-pHmLC1Q45F5RJPaxumzXbPKkbrBXkF0xLX4hlTLN0BRDNxbtF4j8HqaSYkKsQpmpZyIwVGBv89BiG_oLEuhwMoG-lNuNkqAlgQQnARF_41
' Generated on: 2026-01-21T21:28:10.507889300

@startuml
skinparam classAttributeIconSize 0
hide circle

class Animal {
  -name: String
  -age: int
  --
  #makeSound(): void
}

class Cat {
  -breed: String
  --
  #bark(): void
}

class Dog {
  -color: String
  --
  #meow(): void
}

Cat --|> Animal
Dog --|> Animal
@enduml